<resources>
    <string name="app_name">BH Прогнозы</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="topForecasters">Лучшие прогнозисты</string>
    <string name="topBookmakers">Рейтинг букмекеров</string>
    <string name="topMatches">Топ матчи</string>

    <string name="bookmakerColumn">Контора</string>
    <string name="ratingColumn">Рейтинг</string>
    <string name="bonusColumn">Бонус</string>
    <string name="overview">Обзор</string>

    <string name="dateColumn">Дата</string>
    <string name="matchColumn">Матч</string>
    <string name="betsColumn">Ставки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">Главная</string>
    <string name="vanga_title">Прогнозы</string>
    <string name="add_vanga_title">Добавить прогноз</string>
    <string name="profile_title">Профиль</string>
    <string name="menu_title">Меню</string>
    <string name="login_label">Вход</string>
    <string name="password_label">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="login_field_label">Ваша почта или никнейм</string>
    <string name="login_button_text">войти</string>
    <string name="login_field_hint">Введите почту или никнейм</string>
    <string name="or_label">или</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="not_registered_yet_label">Ещё нет аккаунта?</string>
    <string name="register_button_text">Зарегистрируйтесь</string>
    <string name="registration_label">Регистрация</string>
    <string name="already_registered_label">Уже есть аккаунт?</string>
    <string name="return_to_login_button_text">Войдите</string>
    <string name="repeat_password_label">Повторите пароль</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="default_user_name">UserName</string>
    <string name="see_all_label_text">Посмотреть всех</string>
    <string name="bookmakers_rating_label">Рейтинг букмекеров</string>
    <string name="firm_name_label">Контора</string>
    <string name="rating_label">Рейтинг</string>
    <string name="bonus_label">Бонус</string>
    <string name="top_matches_label">Топ матчи</string>
    <string name="top_bets_label">Топ ставки</string>
    <string name="date">Дата</string>
    <string name="match">Матч</string>
    <string name="bets">Ставки</string>
    <string name="last_forecasts_label">Последние прогнозы</string>
    <string name="forecast_label">Прогноз:</string>
    <string name="coefficient_label">Коэффициент:</string>
    <string name="bet_sum_label">Сумма ставки:</string>
    <string name="game_start_time_label">Начало игры</string>
    <string name="fish_sample_text">Дуализм преобразует структурализм, не учитывая мнения авторитетов. Согласно мнению известных философов, александрийская школа изоморфна времени. Гений, следовательно, представляет собой трагический гедонизм. Диалектика вырождена. Суждение поразительно. Интеллект индуцирует естественный закон внешнего мира, изменяя привычную реальность. Созерцание, как следует из вышесказанного, поразительно. Заблуждение, следовательно, индуктивно дискредитирует структурализм.</string>
    <string name="stonks_label">Прибыль:</string>
    <string name="all_forecasts_label">Все прогнозы</string>
    <string name="forecasts">Прогнозы</string>
    <string name="subscriptions">Подписки</string>
    <string name="allForecasts">Все прогнозы</string>
    <string name="paid">Платные</string>
    <string name="forecastField">Прогноз:</string>
    <string name="coefficientField">Коэффициент:</string>
    <string name="betAmountField">Сумма ставки:</string>
    <string name="gameStartField">Начало игры:</string>
    <string name="profitField">Прибыль:</string>
    <string name="review_label_text">Обзор</string>

    <string name="showMore">Показать больше</string>
    <string name="copyright">© 2020 г. Betting HUB</string>

    <string name="bankField">БАНК:</string>

    <string name="allSports">Все</string>
    <string name="football">Футбол</string>
    <string name="tennis">Теннис</string>
    <string name="basketball">Баскетбол</string>
    <string name="hockey">Хоккей</string>
    <string name="other">Другое</string>

    <string name="nearestField">Ближайшие:</string>
    <string name="allTime">Все время</string>
    <string name="day">День</string>
    <string name="h12">12 часов</string>
    <string name="h6">6 часов</string>
    <string name="h3">3 часа</string>

    <string name="tournamentField">Турнир</string>
    <string name="dateAndTimeField">Дата и время</string>
    <string name="forecastField1">Прогноз</string>
    <string name="coefficientField1">Коэффициент</string>
    <string name="betField">Ставка</string>
    <string name="possibleWinField">Возможный выигрыш</string>

    <string name="subscribe">+ Подписаться</string>
    <string name="unsubscribe">- Отписаться</string>

    <string name="reply">Ответить</string>
    <string name="newComment">Новый комментарий</string>

	<string name="invalid_email">Некорректный email!</string>
    <string name="too_short_password_hint">Слишком короткий пароль!</string>
    <string name="dismatch_passwords_hint">Пароли не сопадают!</string>
    <string name="email_hint">Введите email</string>
    <string name="email_label">Ваша почта</string>
    <string name="show_more_title">Показать больше</string>

    <string name="forecastRating">Рейтинг прогнозистов</string>
    <string name="bookmakerRating">Рейтинг букмекеров</string>
    <string name="month">Месяц</string>

    <string name="numberColumn">№</string>
    <string name="nameColumn">Имя</string>
    <string name="wldColumn">W/L/D</string>
    <string name="profitColumn">Прибыль</string>
    <string name="wldTemplate"><![CDATA[<font color=#0F971D>#W_VALUE</font><font color=#343638>/</font><font color=#AA0F0F>#L_VALUE</font><font color=#343638>/</font><font color=#0F19AA>#D_VALUE</font>]]></string>

    <string name="topMatchesTileTittle">Топ матчи</string>
    <string name="newsTileTitle">Новости</string>
    <string name="privacyTileTitle">Политика\nконфидициальности</string>
    <string name="feedbackTileTitle">Обратная\nсвязь</string>
    <string name="bookmakersRatingTileTitle">Рейтинг\nбукмекеров</string>
    <string name="forecasterRatingTileTitle">Рейтинг\nпрогнозистов</string>
    <string name="articlesTileTitle">Статьи</string>

    <string name="rateApp">Оценить мобильное приложение</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="personalDataBlockTitle">Персональные данные:</string>
    <string name="emailField">E-mail</string>
    <string name="linkedAccountBlockTitle">Связанные аккаунты:</string>
    <string name="changePasswordBlockTitle">Изменить пароль:</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google</string>
    <string name="vk" translatable="false">ВКонтакте</string>
    <string name="newPassword">Новый пароль</string>
    <string name="saveChanges">Сохранить изменения</string>
    <string name="setupNotificationsBlockTitle">Настройка уведомлений:</string>
    <string name="emailNotifications">Уведомления на почту</string>
    <string name="pushNotifications">Пуш-уведомления</string>
    <string name="commentReplyNotifications">Ответы на комментарии</string>

    <string name="signOut">Выйти</string>

    <string name="statistics">Статистика</string>
    <string name="favorites">Избранное</string>

    <string name="winsStat">Побед</string>
    <string name="lesionsStat">Поражений</string>
    <string name="returnsStat">Возвратов</string>
    <string name="subsStat">Подписчиков</string>
    <string name="positionStat">Место</string>
    <string name="netProfitStat">Чист. прибыль</string>
    <string name="forecasts1">Прогнозов</string>
    <string name="bitWinLegend">Ставка Выиграла</string>
    <string name="bitLoseLegend">Ставка Проиграла</string>
    <string name="returnLegend">Возврат</string>
    <string name="roi" translatable="false">ROI</string>
    <string name="netProfitStat1">Чистая прибыль</string>
    <string name="passability">Проходимость</string>
    <string name="avgCoeff">Средний коэффициент</string>

    <string name="passwordRecovery">Восстановление пароля</string>
    <string name="recover">Восстановить</string>
    <string name="withGoogle">С помощью Google</string>
    <string name="byGoogle">Войти через Google</string>
    <string name="wrongLoginOrPassword">Неверный пароль или логин!</string>
    <string name="fillAllFields">Заполните все поля</string>
    <string name="factor">Коэффициент</string>
    <string name="site">Сайт</string>
    <string name="line">Линия</string>
    <string name="reliability">Надежность</string>
    <string name="pay_methods">Платежные системы</string>
    <string name="bonus">Бонус</string>

    <string name="defaultValue" translatable="false">0</string>
    <string name="article_recommendations">Рекомендации от опытного игрока</string>
    <string name="articles_title">Статьи</string>
    <string name="articles">Статьи</string>

    <string name="news">Новости</string>

    <string name="addForecast">Добавить прогноз</string>
    <string name="addExpress">Добавить экспресс</string>
    <string name="matchSearchHint">Поиск матча…</string>

    <string name="bookmaker">Букмекерская контора</string>
    <string name="kindOfSport">Вид спорта</string>
    <string name="championship">Чемпионат</string>
    <string name="teams">Команды</string>
    <string name="eventDate">Дата события</string>
    <string name="eventTime">Время события</string>
    <string name="bookmakerCoeff">Коэф. конторы</string>
    <string name="outcome">Исход</string>
    <string name="betPer">Ставка %</string>
    <string name="betRaw">Ставка</string>
    <string name="forecastDescription">Описание прогноза</string>
    <string name="forecastDescriptionHint">Минимум 100 символов…</string>
    <string name="collapse">(свернуть)</string>
    <string name="overallCoeff">Общий коэффициент:</string>
</resources>
