<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/main_title" />

    <item
        android:id="@+id/forecastsFragment"
        android:icon="@drawable/ic_radiation"
        android:title="@string/vanga_title" />

    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/ic_swiss"
        android:title="@string/add_vanga_title" />
    <item
        android:id="@+id/profileSettingsFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title"/>
    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_hamburger"
        android:title="@string/menu_title"/>
</menu>
