<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@drawable/bg_rating_header">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_top_cornered_frame_6dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/color9"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column1End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column2End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58"
        />

    <View
        android:id="@+id/column3End"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="@id/column2End"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/number"
        android:layout_height="match_parent"
        style="@style/TableHeaderStyle"
        android:text="@string/numberColumn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/column1End"
        />

    <TextView
        android:id="@+id/name"
        android:layout_height="match_parent"
        style="@style/TableHeaderStyle"
        android:text="@string/nameColumn"
        app:layout_constraintStart_toEndOf="@id/column1End"
        />

    <TextView
        android:id="@+id/wld"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        style="@style/TableHeaderStyle"
        android:text="@string/wldColumn"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/column2End"
        app:layout_constraintEnd_toEndOf="@id/column3End"
        />

    <TextView
        android:id="@+id/profit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        style="@style/TableHeaderStyle"
        android:text="@string/profitColumn"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/column3End"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
