<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.xbethub.webview.ui.forgotPassword.ForgotPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/loginSideMargin"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/loginSideMargin"
            />

        <TextView
            android:id="@+id/title"
            style="@style/LoginTitleStyle"
            android:layout_marginTop="50dp"
            android:text="@string/passwordRecovery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailOrUserNameLabel"
            style="@style/LoginLabelStyle"
            android:layout_marginTop="50dp"
            android:text="@string/login_field_label"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/emailOrUserNameField"
            style="@style/LoginFieldStyle"
            android:layout_width="0dp"
            android:hint="@string/login_field_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/loginFieldTopMargin"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/emailOrUserNameLabel" />

        <Button
            style="@style/LoginButtonStyle"
            android:id="@+id/recoverBtn"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/recover"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/emailOrUserNameField"
            android:onClick="@{v -> fragment.onRecoverBtnClick()}"/>

        <include
            android:visibility="gone"
            android:id="@+id/socialNetworks"
            layout="@layout/element_social_networks"
            app:googleBtnClickListener="@{v -> fragment.onGoogleBtnClick()}"
            app:fbBtnClickListener="@{v -> fragment.onFBBtnClick()}"
            app:vkBtnClickListener="@{v -> fragment.onVKBtnClick()}"
            app:googleText="@{@string/withGoogle}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recoverBtn"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toEndOf="@id/end"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
