<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xbethub.webview.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_radiation"
            app:destination="@id/navigation_radiation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_forecastFragment"
            app:destination="@id/forecastFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_radiation"
        android:name="com.xbethub.webview.ui.forecasts.ForecastsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_forecasts">
        <action
            android:id="@+id/action_navigation_radiation_to_forecastFragment"
            app:destination="@id/forecastFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_plus"
        android:name="com.xbethub.webview.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.xbethub.webview.ui.ProfileNavigationFragment"
        android:label="fragment_profile_navigation"
        tools:layout="@layout/fragment_profile_navigation" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.xbethub.webview.ui.SettingsNavigationFragment"
        android:label="fragment_settings_navigation"
        tools:layout="@layout/fragment_settings_navigation" />
    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.xbethub.webview.ui.forecast.ForecastFragment"
        android:label="ForecastFragment"
        tools:layout="@layout/fragment_forecast">
        <argument
            android:name="forecast"
            app:argType="com.xbethub.webview.models.Forecast" />
    </fragment>
</navigation>
