<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/color9">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/column2Begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="75dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/column3Begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="80dp"
            />

        <TextView
            style="@style/TableHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dateColumn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/column2Begin"
            />

        <TextView
            style="@style/TableHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/matchColumn"
            android:gravity="start|center_vertical"
            android:paddingStart="25dp"
            app:layout_constraintStart_toStartOf="@id/column2Begin"
            app:layout_constraintEnd_toEndOf="@id/column3Begin"
            />

        <TextView
            style="@style/TableHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/betsColumn"
            app:layout_constraintStart_toStartOf="@id/column3Begin"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/borders"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/leftBorder"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="#E5E2E2"
                />

            <View
                android:id="@+id/rightBorder"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="#E5E2E2"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
